// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Col renders correctly with custom gutter 1`] = `
<DocumentFragment>
  .cache-jy8sv1-StyledCol {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 32px;
  padding-right: 32px;
}

<div
    class="efyj23m0 cache-jy8sv1-StyledCol"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-3x8po3-StyledCol {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    class="efyj23m0 cache-3x8po3-StyledCol"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with responsive as auto 1`] = `
<DocumentFragment>
  .cache-1p8urop-StyledCol {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 768px) {
  .cache-1p8urop-StyledCol {
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    max-width: none;
    width: auto;
  }
}

<div
    class="efyj23m0 cache-1p8urop-StyledCol"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with responsive as bool 1`] = `
<DocumentFragment>
  .cache-4ksbyi-StyledCol {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 768px) {
  .cache-4ksbyi-StyledCol {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    max-width: 100%;
  }
}

<div
    class="efyj23m0 cache-4ksbyi-StyledCol"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with responsive as number 1`] = `
<DocumentFragment>
  .cache-1nav4rz-StyledCol {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 768px) {
  .cache-1nav4rz-StyledCol {
    -webkit-flex: 0 0 33.3333%;
    -ms-flex: 0 0 33.3333%;
    flex: 0 0 33.3333%;
    max-width: 33.3333%;
  }
}

<div
    class="efyj23m0 cache-1nav4rz-StyledCol"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly without responsive when smallest breakpoint 1`] = `
<DocumentFragment>
  .cache-8nrsjr-StyledCol {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
}

<div
    class="efyj23m0 cache-8nrsjr-StyledCol"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Grid renders correctly when fluid 1`] = `
<DocumentFragment>
  .cache-za65rn-StyledGrid {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    class="em1vjd40 cache-za65rn-StyledGrid"
  >
    Sample Grid
  </div>
</DocumentFragment>
`;

exports[`Grid Grid renders correctly with custom gutter 1`] = `
<DocumentFragment>
  .cache-1odv6dy-StyledGrid {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 32px;
  padding-right: 32px;
}

@media (min-width: 576px) {
  .cache-1odv6dy-StyledGrid {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .cache-1odv6dy-StyledGrid {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .cache-1odv6dy-StyledGrid {
    max-width: 960px;
  }
}

@media (min-width: 1200px) {
  .cache-1odv6dy-StyledGrid {
    max-width: 1140px;
  }
}

<div
    class="em1vjd40 cache-1odv6dy-StyledGrid"
  >
    Sample Grid
  </div>
</DocumentFragment>
`;

exports[`Grid Grid renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-s5hjcx-StyledGrid {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 576px) {
  .cache-s5hjcx-StyledGrid {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .cache-s5hjcx-StyledGrid {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .cache-s5hjcx-StyledGrid {
    max-width: 960px;
  }
}

@media (min-width: 1200px) {
  .cache-s5hjcx-StyledGrid {
    max-width: 1140px;
  }
}

<div
    class="em1vjd40 cache-s5hjcx-StyledGrid"
  >
    Sample Grid
  </div>
</DocumentFragment>
`;

exports[`Grid Row renders correctly with custom gutter 1`] = `
<DocumentFragment>
  .cache-15xy6tp-StyledRow {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -32px;
  margin-right: -32px;
}

<div
    class="e1uuye5o0 cache-15xy6tp-StyledRow"
  >
    Sample Row
  </div>
</DocumentFragment>
`;

exports[`Grid Row renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-cudjbx-StyledRow {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -8px;
  margin-right: -8px;
}

<div
    class="e1uuye5o0 cache-cudjbx-StyledRow"
  >
    Sample Row
  </div>
</DocumentFragment>
`;
